# stacks

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: CLI_README.md  EXAMPLE_CSV_USAGE.md
notebooks/: card_castle.ipynb  util.py
stacks/: __init__.py  __main__.py  card.py  cli.py  filtering.py  parser.py  print.py  stack.py
stacks/cards/: card.py  colors.py  print.py  scryfall_card.py  util.py
stacks/cli/: __init__.py  __main__.py  commands.py  converters.py  operations.py
stacks/parsing/: __init__.py  abstractions.py  arena.py  arena_reader.py  csv.py  csv_reader.py  io_registry.py  parser.py
stacks/scryfall/: client.py  scryer.py  scryfall_card.py
tests/: __init__.py  conftest.py  test_arena_writer.py  test_card.py  test_cli.py  test_cli_commands.py  test_filtering.py  test_io_registry.py  test_parser.py  test_print.py  test_scryer.py  test_scryfall_card.py  test_scryfall_client.py  test_scryfall_integration.py  test_stack.py
